Fix home-page section header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,41 @@
 body {
   width: 100%;
 }
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 5em;
+  font-weight: 700;
+  letter-spacing: -0.06em;
+  padding-top: 100px;
+}
+h3 {
+  font-family: 'Montserrat', sans-serif;
+}
+h5 {
+  margin: auto;
+  width: 100%;
+  padding: 0 0 1em 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+span {
+  color: black;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  display: inline-block;
+  flex-shrink: 3;
+  width: 5.5em;
+  font-size: 1.45em;
+  word-wrap: break-word;
+  font-family: 'Big Shoulders Stencil Text', cursive;
+}
 .body-background {
   background-color: black !important;
 }
-
 .sticky {
   /* position: -webkit-sticky; */
   position: fixed;
@@ -21,34 +52,25 @@ body {
 .home-page {
   color: white;
 }
-
 .overlay {
-  position: relative;
-  top: -40px;
+  /* position: relative;
+  top: -40px; */
 }
 .outline {
   border-top: 0.5px solid white;
   border-bottom: none;
   padding: 25px 7px 20px 7px;
   margin: 5px 7px 5px 7px;
-  /* z-index: 4; */
 }
 .preview-sec-header-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  margin-bottom: 20px;
+  justify-content: center;
+  flex-wrap: nowrap;
 }
 .react-spacing {
   position: relative;
   top: 35px;
-}
-h2 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 5em;
-  font-weight: 700;
-  letter-spacing: -0.06em;
-  padding-top: 100px;
 }
 .preview-sec-title {
   font-family: 'Montserrat', sans-serif;
@@ -56,13 +78,8 @@ h2 {
   margin: auto;
   padding: 0 3% 1.75% 3%;
   width: 31%;
-  display: inline-flex;
-  flex-wrap: nowrap;
+  white-space: nowrap;
   font-weight: 600 !important;
-  /* transition: .5s; */
-}
-.preview-sec-title {
-  /* margin-top: 20px; */
   position: relative;
   bottom: -2em;
   background-color: black;
@@ -81,7 +98,7 @@ h2 {
   color: black;
   display: flex;
   justify-content: space-around;
-  height: 95%;
+  height: 100%;
   position: absolute;
   top: 0;
   margin: 0 13% 0 13%;
@@ -107,18 +124,6 @@ h2 {
   box-shadow: 0 0 30px #000000;
   text-shadow: 0 0 3px #770000;
 }
-span {
-  color: black;
-  margin: 0;
-  padding: 0;
-  justify-content: center;
-  display: inline-block;
-  flex-shrink: 3;
-  width: 5.5em;
-  font-size: 1.45em;
-  word-wrap: break-word;
-  font-family: 'Big Shoulders Stencil Text', cursive;
-}
 .thumbnail {
   display: flex;
   margin: auto;
@@ -137,7 +142,6 @@ span {
   box-shadow: 0 0 10px #fff2a9;
   text-shadow: 0 0 20px #fff2a9;
 }
-
 .feat-app,
 .feat-about {
   border-radius: 5px;
@@ -148,16 +152,6 @@ span {
 }
 .feat-about:hover {
   box-shadow: none;
-}
-h5 {
-  margin: auto;
-  width: 100%;
-  padding: 0 0 1em 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1em;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 /* ABOUT PAGE */
@@ -196,7 +190,4 @@ h5 {
 }
 .position {
   position: static;
-}
-h3 {
-  font-family: 'Montserrat', sans-serif;
 }
